[gd_scene load_steps=5 format=2]

[ext_resource path="res://Pics/story1.jpg" type="Texture" id=1]
[ext_resource path="res://AGENCYB.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://BS.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 2 )

[node name="story1" type="Node2D"]

[node name="story1" type="Sprite" parent="."]
position = Vector2( 511.887, 297.135 )
scale = Vector2( 0.489224, 0.470037 )
texture = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_left = 81.7302
margin_top = 477.48
margin_right = 221.73
margin_bottom = 544.48
custom_fonts/font = SubResource( 1 )
text = "NEXT"
script = ExtResource( 3 )
[connection signal="pressed" from="Button" to="Button" method="_on_Button_pressed"]
