[gd_scene load_steps=5 format=2]

[ext_resource path="res://Pics/story2.jpg" type="Texture" id=1]
[ext_resource path="res://AGENCYB.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://BS.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 2 )

[node name="story2" type="Node2D"]

[node name="story2" type="Sprite" parent="."]
position = Vector2( 513.682, 278.68 )
scale = Vector2( 0.489406, 0.482659 )
texture = ExtResource( 1 )

[node name="Button2" type="Button" parent="."]
margin_left = 74.2743
margin_top = 483.274
margin_right = 204.274
margin_bottom = 554.274
custom_fonts/font = SubResource( 1 )
text = "PLAY"
script = ExtResource( 3 )
[connection signal="pressed" from="Button2" to="Button2" method="_on_Button2_pressed"]
